[package]
name = "windows_common"
version = "0.0.0"
authors = ["lers梦魔 <lersnightmare@gmail.com>"]
description = "Useful macro fro windows-rs"
keywords = ["proc_macro", "procmacro", "macro"]
edition = "2021"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "2.0.58"
widestring = { version = "1.0.2" }
windows = "0.54.0"

