[package]
name = "windows_macro"
version = "0.0.3"
authors = ["lers梦魔 <lersnightmare@gmail.com>"]
description = "Useful macro for windows-rs"
keywords = ["proc_macro", "procmacro", "macro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0.58", features = ["full", "parsing"] }