[package]
name = "lers_windows_macro"
version = "0.0.3"
authors = ["lers梦魔"]
description = "Useful macro for windows-rs"
edition = "2021"
readme = "README.md"
license = "MIT"
exclude = ["/src/main.rs", "/target", ".*"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0.58", features = ["full", "parsing"] }